[metadata]
name = aodh
url = http://launchpad.net/aodh
summary = OpenStack Telemetry Alarming
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/aodh/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    aodh

[extras]
mysql =
    SQLAlchemy>=0.9.7
    sqlalchemy-utils
    alembic>=0.7.2
    PyMySQL>=0.6.2 # MIT License

postgresql =
    SQLAlchemy>=0.9.7
    sqlalchemy-utils
    alembic>=0.7.2
    psycopg2

zaqar =
    python-zaqarclient>=1.2.0

test =
    pifpaf[gnocchi]>=1.0.1
    os-testr>=0.4.1 # Apache-2.0
    oslotest>=2.15.0 # Apache-2.0
    coverage>=3.6
    fixtures>=1.3.1
    mock>=1.0
    sqlalchemy-utils
    testrepository>=0.0.18
    testresources>=0.2.4 # Apache-2.0/BSD
    gabbi>=1.30.0 # Apache-2.0
    # Provides subunit-trace
    webtest
    gnocchi[postgresql,file]

[entry_points]
aodh.storage =
    log = aodh.storage.impl_log:Connection
    mysql = aodh.storage.impl_sqlalchemy:Connection
    mysql+pymysql = aodh.storage.impl_sqlalchemy:Connection
    postgresql = aodh.storage.impl_sqlalchemy:Connection
    sqlite = aodh.storage.impl_sqlalchemy:Connection

aodh.alarm.rule =
    gnocchi_resources_threshold = aodh.api.controllers.v2.alarm_rules.gnocchi:MetricOfResourceRule
    gnocchi_aggregation_by_metrics_threshold = aodh.api.controllers.v2.alarm_rules.gnocchi:AggregationMetricsByIdLookupRule
    gnocchi_aggregation_by_resources_threshold = aodh.api.controllers.v2.alarm_rules.gnocchi:AggregationMetricByResourcesLookupRule
    event = aodh.api.controllers.v2.alarm_rules.event:AlarmEventRule
    composite = aodh.api.controllers.v2.alarm_rules.composite:composite_rule

aodh.evaluator =
    gnocchi_resources_threshold = aodh.evaluator.gnocchi:GnocchiResourceThresholdEvaluator
    gnocchi_aggregation_by_metrics_threshold = aodh.evaluator.gnocchi:GnocchiAggregationMetricsThresholdEvaluator
    gnocchi_aggregation_by_resources_threshold = aodh.evaluator.gnocchi:GnocchiAggregationResourcesThresholdEvaluator
    composite = aodh.evaluator.composite:CompositeEvaluator
    loadbalancer_member_health = aodh.evaluator.loadbalancer:LoadBalancerMemberHealthEvaluator

aodh.notifier =
    log = aodh.notifier.log:LogAlarmNotifier
    test = aodh.notifier.test:TestAlarmNotifier
    http = aodh.notifier.rest:RestAlarmNotifier
    https = aodh.notifier.rest:RestAlarmNotifier
    trust+http = aodh.notifier.trust:TrustRestAlarmNotifier
    trust+https = aodh.notifier.trust:TrustRestAlarmNotifier
    zaqar = aodh.notifier.zaqar:ZaqarAlarmNotifier
    trust+zaqar = aodh.notifier.zaqar:TrustZaqarAlarmNotifier

wsgi_scripts =
    aodh-api = aodh.api.app:build_wsgi_app

console_scripts =
    aodh-dbsync = aodh.cmd.storage:dbsync
    aodh-expirer = aodh.cmd.storage:expirer
    aodh-evaluator = aodh.cmd.alarm:evaluator
    aodh-notifier = aodh.cmd.alarm:notifier
    aodh-listener = aodh.cmd.alarm:listener
    aodh-config-generator = aodh.cmd:config_generator
    aodh-status = aodh.cmd.status:main

oslo.config.opts =
    aodh = aodh.opts:list_opts
    aodh-auth = aodh.opts:list_keystoneauth_opts

oslo.config.opts.defaults =
    aodh = aodh.conf.defaults:set_cors_middleware_defaults

oslo.policy.policies =
    aodh = aodh.api.policies:list_rules

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = aodh/locale/aodh.pot

[compile_catalog]
directory = aodh/locale
domain = aodh

[update_catalog]
domain = aodh
output_dir = aodh/locale
input_file = aodh/locale/aodh.pot
